# Customer-Service-Agent

./: JustFile  LICENSE  README.md  config.py  frontend.py  logging_server.py  main.py  mkdocs.yml  pyproject.toml  start_server.py  zmq_logger.py
analyzer/: __init__.py  analyzer.py  compliance.py  diarization.py  pii_profanity.py  sentiment_speed.py  transcription.py
config/: call_category.yaml  config.toml  phrases.yaml  pii_profanity.yaml
docs/: architecture.md  experience.md  functionalities.md  index.md
routes/: __init__.py  routes.py
utils/: __init__.py  yaml_loader.py
validate/: __init__.py  validate.py
