[project]
name = "customer-service-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "better-profanity>=0.7.0",
    "fastapi[standard]>=0.115.8",
    "ffmpeg>=1.4",
    "gradio>=3.36.1",
    "httpx>=0.28.1",
    "librosa>=0.10.2.post1",
    "loguru>=0.7.3",
    "openai-whisper>=20240930",
    "pyannote-audio>=3.3.2",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.9.6",
    "textblob>=0.19.0",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "torch-model-archiver>=0.12.0",
    "torchserve>=0.12.0",
    "transformers>=4.48.3",
    "uvicorn>=0.34.0",
    "whisper>=1.1.10",
    "zmq>=0.0.0",
]

[tool.ruff]
select = ["ALL"] 


# The following code is useful for setting up pytorch
# copy this in your projects
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu"},
]
torchvision = [
  { index = "pytorch-cpu" },
]



[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
